# vedirect_rs

./: Cargo.toml  README.md
vedirect_rs/: Cargo.toml  justfile
vedirect_rs/src/: enums.rs  lib.rs  nom_parse.rs  structs.rs  ve_direct_parsing.rs
vedirect_rs/tests/: test_data_processing.rs  test_parser.rs  test_reflection.rs
vedirect_to_json/: Cargo.toml  justfile
vedirect_to_json/src/: main.rs
