[package]
name = "vedirect_rs"
version = "0.1.1"
edition = "2021"
description = "Parse Victron VE.Direct serial output to a well-formed struct"
license = "MIT"
repository = "https://github.com/PeterGrace/vedirect_rs.git"

[lib]
name = "vedirect_rs"
path = "src/lib.rs"

[dependencies]
nom = "7.1.3"
thiserror = { version = "1.0.63" }
tracing = "0.1.40"
strum = { version = "0.26.3", features = [ "derive", "strum_macros"] }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = "1.0.204"
[dev-dependencies]
simple-base64 = "0.23.2"
