[package]
name = "vedirect_to_json"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18",features = ["env-filter", "fmt"] }
tracing-log = "0.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
#tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time"] }
#tokio-util = "0.7.10"
serial = "0.4.0"
circular-buffer = "0.1.7"
vedirect_rs = { path = "../vedirect_rs"}
